--- a/views/idea/list.pug
+++ b/views/idea/list.pug
@@ -5,6 +5,6 @@ block content
 
 	include ../defaultTable.pug
 
-	a.btn.btn-default(href="/idea/add") Add
+	a.btn.btn-default(href="/ideas/add") Add
 
 
