--- a/views/idea/edit.pug
+++ b/views/idea/edit.pug
@@ -1,16 +1,16 @@
 extends ../layout.pug
 
 block content
-    h1 Edit #{opt.model}
+    h1 Edit
     form(method="post")
         each field in opt.fields
-            if field != '_id'
+            if field != '_id' && field != 'id'
                 fieldset.form-group
                     label(for=field)=field
                     input.form-control(name=field, type="text",value=post[field])
             else
                 input(name=field,type="hidden",value=post[field])
         button.btn.btn-primary(type="submit") Save
-        a.btn.btn-default(href="/idea/list") Cancel
+        a.btn.btn-default(href="/ideas") Cancel
 
 //- TODO use schema to determine type of input field
