--- a/views/signup.pug
+++ b/views/signup.pug
@@ -14,6 +14,6 @@ block content
                         label Password:
                         input.form-control(type='password', name='password')
                     .form-group
-                        input.btn.btn-primary(type='submit', value='Log In')
+                        input.btn.btn-primary(type='submit', value='Submit')
 
 
